# jobads-dashboard

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  pyproject.toml  render.yaml  streamlit_app.py
data/derived/labor_market_dashboard_v1/: geography_top_markets.parquet  metadata.json  monthly_by_naics_broad.parquet  monthly_by_noc_broad.parquet  monthly_by_province.parquet  monthly_conditions.parquet  monthly_filter_cube.parquet  monthly_language.parquet  monthly_overall.parquet  monthly_requirements.parquet  monthly_wage_by_noc_broad.parquet  monthly_wage_by_province.parquet  monthly_wage_cube.parquet
docs/analyses/labor_market_dashboard/: README.md
docs/analyses/labor_market_dashboard_spec/: report.md
docs/analyses/private_query_dashboard/: runbook.md
docs/jobs/: 2026-03-29-render-hosting-ongoing.md  ui-polish-ongoing.md
docs/jobs/archive/: 2026-03-24-jobads-dashboard-bootstrap.md  2026-03-24-jobads-dashboard-implementation.md  2026-03-25-jobads-dashboard-extensive-verification-rerun.md  2026-03-25-jobads-dashboard-extensive-verification.md  2026-03-25-jobads-dashboard-width-validation-extensive-verification.md  2026-03-27-aclmr-redesign.md  2026-03-27-jobads-dashboard-extensive-verification-polish-rerun.md  2026-03-27-jobads-dashboard-extensive-verification-polishing.md  (+4 more)
memory/: 2026-03-24.md  2026-03-25.md  2026-03-27.md  2026-03-29.md  2026-06-02.md
src/jobads_dashboard/: __init__.py  cli.py  streamlit_app.py
tests/: test_app_surface.py  test_cli.py  test_metrics.py  test_posting_lookup.py  test_refresh_contract.py
(+6 files in other folders)
